# ffmpeg_cpp_facade

./: .gitignore  CMakeLists.txt  ffmpeg_cpp_facade.cpp  ffmpeg_cpp_facade.h  lib_paths(example).cmake  main.cpp  msbuild.bat  readme.md
